--- a/app/src/main/res/values/app_strings.xml
+++ b/app/src/main/res/values/app_strings.xml
@@ -10,7 +10,7 @@
     <string name="app_name">Handy notes</string>
 
     <string name="title_frg_rank">Categories</string>
-    <string name="title_frg_notes">Notes</string>
+    <string name="title_frg_note">Notes</string>
     <string name="title_frg_bin">Bin</string>
     <string name="title_act_settings">Settings</string>
 
