--- a/app/src/main/res/menu/menu_act_note.xml
+++ b/app/src/main/res/menu/menu_act_note.xml
@@ -5,40 +5,40 @@
     tools:ignore="AlwaysShowAction">
 
     <group
-        android:id="@+id/menu_note_grDelete"
+        android:id="@+id/menu_actNote_grDelete"
         android:visible="false">
         <item
-            android:id="@+id/menu_note_restore"
+            android:id="@+id/menu_actNote_restore"
             android:icon="@drawable/ic_menu_restore"
             android:title="@string/menu_note_restore"
             app:showAsAction="always" />
         <item
-            android:id="@+id/menu_note_delete_forever"
+            android:id="@+id/menu_actNote_clear"
             android:icon="@drawable/ic_menu_clear"
             android:title="@string/menu_note_clear"
             app:showAsAction="always" />
     </group>
 
     <group
-        android:id="@+id/menu_note_grEdit"
+        android:id="@+id/menu_actNote_grEdit"
         android:visible="false">
         <item
-            android:id="@+id/menu_note_save"
+            android:id="@+id/menu_actNote_save"
             android:title="@string/menu_note_save"
             app:showAsAction="always" />
         <item
-            android:id="@+id/menu_note_editMore"
+            android:id="@+id/menu_actNote_editMore"
             android:icon="@drawable/ic_menu_more"
             android:title="@string/menu_note_more"
             app:showAsAction="always">
             <menu>
                 <item
-                    android:id="@+id/menu_note_rank"
+                    android:id="@+id/menu_actNote_rank"
                     android:icon="@drawable/ic_menu_rank"
                     android:title="@string/menu_note_rank"
                     app:showAsAction="always|withText" />
                 <item
-                    android:id="@+id/menu_note_color"
+                    android:id="@+id/menu_actNote_color"
                     android:icon="@drawable/ic_menu_palette"
                     android:title="@string/menu_note_color"
                     app:showAsAction="always|withText" />
@@ -46,39 +46,39 @@
         </item>
     </group>
 
-    <group android:id="@+id/menu_note_grRead">
+    <group android:id="@+id/menu_actNote_grRead">
         <item
-            android:id="@+id/menu_note_edit"
+            android:id="@+id/menu_actNote_edit"
             android:title="@string/menu_note_edit"
             app:showAsAction="always" />
 
         <item
-            android:id="@+id/menu_note_readMore"
+            android:id="@+id/menu_actNote_readMore"
             android:icon="@drawable/ic_menu_more"
             android:title="@string/menu_note_more"
             app:showAsAction="always">
             <menu>
 
                 <item
-                    android:id="@+id/menu_note_check"
+                    android:id="@+id/menu_actNote_check"
                     android:icon="@drawable/ic_menu_check"
                     android:title="@string/menu_note_check_all"
                     app:showAsAction="always|withText"/>
 
                 <item
-                    android:id="@+id/menu_note_status_bind"
+                    android:id="@+id/menu_actNote_bind"
                     android:icon="@drawable/ic_menu_bind_roll"
                     android:title="@string/menu_note_status_bind"
                     app:showAsAction="always|withText"/>
 
                 <item
-                    android:id="@+id/menu_note_convert"
+                    android:id="@+id/menu_actNote_convert"
                     android:icon="@drawable/ic_menu_convert"
                     android:title="@string/menu_note_convert_to_roll"
                     app:showAsAction="always|withText" />
 
                 <item
-                    android:id="@+id/menu_note_delete"
+                    android:id="@+id/menu_actNote_delete"
                     android:icon="@drawable/ic_menu_bin"
                     android:title="@string/menu_note_delete"
                     app:showAsAction="always|withText" />
