--- a/app/src/main/res/layout-v21/inc_toolbar.xml
+++ b/app/src/main/res/layout-v21/inc_toolbar.xml
@@ -7,7 +7,7 @@
     android:stateListAnimator="@null">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/incToolbar_tb"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
