--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -13,7 +13,7 @@
         android:layout_weight="1">
 
         <android.support.v4.view.ViewPager
-            android:id="@+id/viewPager_actMain"
+            android:id="@+id/actMain_vp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:overScrollMode="never" />
@@ -21,7 +21,7 @@
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bNavView_actMain"
+        android:id="@+id/actMain_bnv_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorWhite"
