--- a/app/src/main/res/layout/frg_m_rank.xml
+++ b/app/src/main/res/layout/frg_m_rank.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:id="@+id/layout_frgRank_empty"
+            android:id="@+id/frgRank_ll_empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -37,7 +37,7 @@
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView_frgRank"
+            android:id="@+id/frgRank_rv"
             style="@style/RecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
