--- a/app/src/main/res/layout/frg_n_text.xml
+++ b/app/src/main/res/layout/frg_n_text.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content">
 
             <EditText
-                android:id="@+id/editText_frgText_enter"
+                android:id="@+id/frgText_et_enter"
                 style="@style/EditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -32,7 +32,7 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/tView_frgText_text"
+                android:id="@+id/frgText_tv_text"
                 style="@style/EditText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
