--- a/app/src/main/res/layout/inc_toolbar.xml
+++ b/app/src/main/res/layout/inc_toolbar.xml
@@ -6,7 +6,7 @@
     app:elevation="@dimen/app_bar_no_elevation">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/incToolbar_tb"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
