--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout_itemNote_main"
+    android:id="@+id/itemNote_fl_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/item_layout_main_indent"
     android:background="@color/noteWhiteDark">
 
     <FrameLayout
-        android:id="@+id/layout_itemNote_subMain"
+        android:id="@+id/itemNote_fl_submain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/item_layout_sub_indent"
         android:background="@color/noteWhite">
 
         <LinearLayout
-            android:id="@+id/layout_itemNote_click"
+            android:id="@+id/itemNote_ll_click"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
@@ -23,7 +23,7 @@
             android:padding="@dimen/item_layout_medium_indent">
 
             <TextView
-                android:id="@+id/tView_itemNote_name"
+                android:id="@+id/itemNote_tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/item_layout_medium_indent"
@@ -35,13 +35,13 @@
                 android:visibility="visible" />
 
             <LinearLayout
-                android:id="@+id/layout_itemNote_roll_1"
+                android:id="@+id/itemNote_ll_roll_1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/iView_itemNote_rollCheck_1"
+                    android:id="@+id/itemNote_iv_check_1"
                     android:layout_width="@dimen/icon_small_size"
                     android:layout_height="@dimen/icon_small_size"
                     android:layout_gravity="center"
@@ -49,7 +49,7 @@
                     app:srcCompat="@drawable/ic_info_check_outline" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_rollText_1"
+                    android:id="@+id/itemNote_tv_text_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -64,14 +64,14 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/layout_itemNote_roll_2"
+                android:id="@+id/itemNote_ll_roll_2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
 
                 <ImageView
-                    android:id="@+id/iView_itemNote_rollCheck_2"
+                    android:id="@+id/itemNote_iv_check_2"
                     android:layout_width="@dimen/icon_small_size"
                     android:layout_height="@dimen/icon_small_size"
                     android:layout_gravity="center"
@@ -79,7 +79,7 @@
                     app:srcCompat="@drawable/ic_info_check_done" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_rollText_2"
+                    android:id="@+id/itemNote_tv_text_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -94,14 +94,14 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/layout_itemNote_roll_3"
+                android:id="@+id/itemNote_ll_roll_3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
 
 
                 <ImageView
-                    android:id="@+id/iView_itemNote_rollCheck_3"
+                    android:id="@+id/itemNote_iv_check_3"
                     android:layout_width="@dimen/icon_small_size"
                     android:layout_height="@dimen/icon_small_size"
                     android:layout_gravity="center"
@@ -109,7 +109,7 @@
                     app:srcCompat="@drawable/ic_info_check_done" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_rollText_3"
+                    android:id="@+id/itemNote_tv_text_3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -124,7 +124,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:id="@+id/layout_itemNote_roll_4"
+                android:id="@+id/itemNote_ll_roll_4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/item_layout_medium_indent"
@@ -132,7 +132,7 @@
 
 
                 <ImageView
-                    android:id="@+id/iView_itemNote_rollCheck_4"
+                    android:id="@+id/itemNote_iv_check_4"
                     android:layout_width="@dimen/icon_small_size"
                     android:layout_height="@dimen/icon_small_size"
                     android:layout_gravity="center"
@@ -140,7 +140,7 @@
                     app:srcCompat="@drawable/ic_info_check_outline" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_rollText_4"
+                    android:id="@+id/itemNote_tv_text_4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -159,7 +159,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/iView_itemNote_rank"
+                    android:id="@+id/itemNote_iv_rank"
                     android:layout_width="@dimen/icon_small_size"
                     android:layout_height="@dimen/icon_small_size"
                     android:layout_gravity="center"
@@ -169,7 +169,7 @@
                     app:srcCompat="@drawable/ic_menu_rank" />
 
                 <ImageView
-                    android:id="@+id/iView_itemNote_bind"
+                    android:id="@+id/itemNote_iv_bind"
                     android:layout_width="@dimen/icon_small_size"
                     android:layout_height="@dimen/icon_small_size"
                     android:layout_gravity="center"
@@ -179,7 +179,7 @@
                     app:srcCompat="@drawable/ic_menu_bind_roll" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_text"
+                    android:id="@+id/itemNote_tv_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
@@ -191,7 +191,7 @@
                     android:textSize="@dimen/text_small_size" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_change"
+                    android:id="@+id/itemNote_tv_change"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
@@ -204,7 +204,7 @@
                     android:textSize="@dimen/text_small_size" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_create"
+                    android:id="@+id/itemNote_tv_create"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
@@ -216,7 +216,6 @@
                     android:textSize="@dimen/text_small_size" />
 
             </LinearLayout>
-
         </LinearLayout>
     </FrameLayout>
 </FrameLayout>
