--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layout_itemNote_main"
+    android:id="@+id/itemNote_fl_main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/item_layout_main_indent"
     android:background="@color/noteWhiteDark">
 
     <FrameLayout
-        android:id="@+id/layout_itemNote_subMain"
+        android:id="@+id/itemNote_fl_submain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/item_layout_sub_indent"
         android:background="@color/noteWhite">
 
         <LinearLayout
-            android:id="@+id/layout_itemNote_click"
+            android:id="@+id/itemNote_ll_click"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
@@ -23,7 +23,7 @@
             android:padding="@dimen/item_layout_medium_indent">
 
             <TextView
-                android:id="@+id/tView_itemNote_name"
+                android:id="@+id/itemNote_tv_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/item_layout_medium_indent"
@@ -35,7 +35,7 @@
                 android:visibility="visible" />
 
             <TextView
-                android:id="@+id/tView_itemNote_text"
+                android:id="@+id/itemNote_tv_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/item_layout_medium_indent"
@@ -51,7 +51,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/iView_itemNote_rank"
+                    android:id="@+id/itemNote_iv_rank"
                     android:layout_width="@dimen/icon_small_size"
                     android:layout_height="@dimen/icon_small_size"
                     android:layout_gravity="center"
@@ -61,7 +61,7 @@
                     app:srcCompat="@drawable/ic_menu_rank" />
 
                 <ImageView
-                    android:id="@+id/iView_itemNote_bind"
+                    android:id="@+id/itemNote_iv_bind"
                     android:layout_width="@dimen/icon_small_size"
                     android:layout_height="@dimen/icon_small_size"
                     android:layout_gravity="center"
@@ -71,7 +71,7 @@
                     app:srcCompat="@drawable/ic_menu_bind_text" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_change"
+                    android:id="@+id/itemNote_tv_change"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
@@ -84,7 +84,7 @@
                     android:textSize="@dimen/text_small_size" />
 
                 <TextView
-                    android:id="@+id/tView_itemNote_create"
+                    android:id="@+id/itemNote_tv_create"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/item_layout_small_indent"
