--- a/app/src/main/res/layout/item_note_text.xml
+++ b/app/src/main/res/layout/item_note_text.xml
@@ -1,102 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/itemNote_fl_main"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/item_layout_main_indent"
-    android:background="@color/noteWhiteDark">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <FrameLayout
-        android:id="@+id/itemNote_fl_submain"
+    <data>
+
+        <import type="sgtmelon.handynotes.Help.Time" />
+
+        <import type="android.text.TextUtils" />
+
+        <import type="android.view.View" />
+
+        <variable
+            name="itemNote"
+            type="sgtmelon.handynotes.model.item.ItemNote" />
+
+    </data>
+
+    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/itemNote_fl_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/item_layout_sub_indent"
-        android:background="@color/noteWhite">
+        android:layout_margin="@dimen/item_layout_main_indent"
+        android:background="@color/noteWhiteDark">
 
-        <LinearLayout
-            android:id="@+id/itemNote_ll_click"
+        <FrameLayout
+            android:id="@+id/itemNote_fl_submain"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:orientation="vertical"
-            android:padding="@dimen/item_layout_medium_indent">
-
-            <TextView
-                android:id="@+id/itemNote_tv_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/item_layout_medium_indent"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="@string/test_item_note_name"
-                android:textColor="@color/colorDark"
-                android:textSize="@dimen/text_big_size"
-                android:visibility="visible" />
-
-            <TextView
-                android:id="@+id/itemNote_tv_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/item_layout_medium_indent"
-                android:ellipsize="end"
-                android:maxLines="5"
-                android:text="@string/test_item_note_text"
-                android:textColor="@color/colorDark"
-                android:textSize="@dimen/text_medium_size" />
+            android:layout_margin="@dimen/item_layout_sub_indent"
+            android:background="@color/noteWhite">
 
             <LinearLayout
+                android:id="@+id/itemNote_ll_click"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_rank"
-                    android:layout_width="@dimen/icon_small_size"
-                    android:layout_height="@dimen/icon_small_size"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:layout_marginRight="@dimen/item_layout_small_indent"
-                    android:tint="@color/colorDark"
-                    app:srcCompat="@drawable/ic_menu_rank" />
-
-                <ImageView
-                    android:id="@+id/itemNote_iv_bind"
-                    android:layout_width="@dimen/icon_small_size"
-                    android:layout_height="@dimen/icon_small_size"
-                    android:layout_gravity="center"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:layout_marginRight="@dimen/item_layout_small_indent"
-                    android:tint="@color/colorDark"
-                    app:srcCompat="@drawable/ic_menu_bind_text" />
+                android:layout_height="wrap_content"
+                android:background="?attr/selectableItemBackground"
+                android:orientation="vertical"
+                android:padding="@dimen/item_layout_medium_indent">
 
                 <TextView
-                    android:id="@+id/itemNote_tv_change"
-                    android:layout_width="0dp"
+                    android:id="@+id/itemNote_tv_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:layout_marginRight="@dimen/item_layout_small_indent"
-                    android:layout_weight="1"
+                    android:layout_marginBottom="@dimen/item_layout_medium_indent"
                     android:ellipsize="end"
                     android:maxLines="1"
-                    android:text="@string/test_item_note_change"
+                    android:text='@{itemNote.name}'
                     android:textColor="@color/colorDark"
-                    android:textSize="@dimen/text_small_size" />
+                    android:textSize="@dimen/text_big_size"
+                    android:visibility='@{TextUtils.isEmpty(itemNote.name) ? View.GONE : View.VISIBLE}' />
 
                 <TextView
-                    android:id="@+id/itemNote_tv_create"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/itemNote_tv_text"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/item_layout_small_indent"
-                    android:layout_marginRight="@dimen/item_layout_small_indent"
+                    android:layout_marginBottom="@dimen/item_layout_medium_indent"
                     android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="@string/test_item_note_create"
+                    android:maxLines="5"
+                    android:text='@{itemNote.text}'
                     android:textColor="@color/colorDark"
-                    android:textSize="@dimen/text_small_size" />
+                    android:textSize="@dimen/text_medium_size" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_rank"
+                        android:layout_width="@dimen/icon_small_size"
+                        android:layout_height="@dimen/icon_small_size"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="@dimen/item_layout_small_indent"
+                        android:layout_marginRight="@dimen/item_layout_small_indent"
+                        android:tint="@color/colorDark"
+                        android:visibility='@{itemNote.rankId.length == 0 ? View.GONE : View.VISIBLE}'
+                        app:srcCompat="@drawable/ic_menu_rank" />
+
+                    <ImageView
+                        android:id="@+id/itemNote_iv_bind"
+                        android:layout_width="@dimen/icon_small_size"
+                        android:layout_height="@dimen/icon_small_size"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="@dimen/item_layout_small_indent"
+                        android:layout_marginRight="@dimen/item_layout_small_indent"
+                        android:tint="@color/colorDark"
+                        android:visibility='@{itemNote.status ? View.VISIBLE : View.GONE}'
+                        app:srcCompat="@drawable/ic_menu_bind_text" />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_change"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/item_layout_small_indent"
+                        android:layout_marginRight="@dimen/item_layout_small_indent"
+                        android:layout_weight="1"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text='@{Time.formatNoteDate(context, itemNote.change)}'
+                        android:textColor="@color/colorDark"
+                        android:textSize="@dimen/text_small_size" />
+
+                    <TextView
+                        android:id="@+id/itemNote_tv_create"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/item_layout_small_indent"
+                        android:layout_marginRight="@dimen/item_layout_small_indent"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text='@{Time.formatNoteDate(context, itemNote.create)}'
+                        android:textColor="@color/colorDark"
+                        android:textSize="@dimen/text_small_size" />
+
+                </LinearLayout>
 
             </LinearLayout>
-
-        </LinearLayout>
+        </FrameLayout>
     </FrameLayout>
-</FrameLayout>
+</layout>
